--- a/login.css
+++ b/login.css
@@ -1,181 +1,220 @@
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+  padding: 0;
+  margin: 0;
 }
 
-body {
-    background: linear-gradient(#2a2a2a 0%, #010101 100%);
-    font-family: 'Libre Franklin', sans-serif;
+:root {
+  display: flex;
+  width: 100%;
+  flex-direction: column;
+  overflow-x: hidden;
+  background: linear-gradient(to bottom,rgba(0, 0, 0, 0.798),rgba(0, 0, 0, 0.875), rgba(0, 0, 0, 0.873) ,rgba(0, 0, 0, 0.957),black);
+}
+:root::-webkit-scrollbar {
+  width: 15px;
+}
+:root::-webkit-scrollbar-track {
+  background-color: rgba(17, 17, 17, 0.562);
+}
+:root::-webkit-scrollbar-thumb {
+  background-color: rgba(91, 90, 97, 0.363);
+}
+:root::-webkit-scrollbar-thumb:hover {
+  background: rgb(64, 63, 63);
+}
+
+.logo {
+  position: relative;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  width: 100rem;
+  height: 15vh;
+  background-color: rgb(18, 18, 18);
+  color: white;
+}
+.logo p {
+  padding-left: 10px;
+  font-size: 20px;
+  font-weight: 800;
+}
+.logo i {
+  padding-left: 40px;
+  font-size: 40px;
 }
 
 .container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
+  display: flex;
+  flex-direction: column;
+  height: min-content;
+  width: 40vw;
+  margin: 50px auto;
+  background-color: rgb(18, 18, 18);
+  color: white;
+  border-radius: 15px;
+  align-items: center;
+  padding: 60px 40px;
+  position: relative;
 }
 
 
-/* --------------------------------Navbar----------------------------------------- */
-
-.header {
-    background-color: #121212;
-    padding: 2rem 0rem 2rem 3.188rem;
-}
-
-.navlogo{
-    height: 2.2rem;
-}
-
-
-/* --------------------------------Main-Form----------------------------------------- */
-
-.main {
-    display: flex;
-    flex-direction: column;
-    padding: 4rem;
-    align-items: center;
-    justify-content: center;
-    margin: 1rem auto;
-    background-color: #121212;
-    color: white;
-    border-radius: 8px;
-    width: 50%;
-    margin: 2rem;
-}
-
-.continuebtn {
-    display: flex;
-    flex-direction: column;
-}
-
-.continuebtn > h1 {
-    font-size: 2.7rem;
-    margin-bottom: 2rem;
-    letter-spacing: 0px;
-    word-spacing: 0px;
-}
-
-.google {
-    display: inline-block;
-    background: url("https://accounts.scdn.co/sso/images/new-google-icon.72fd940a229bc94cf9484a3320b3dccb.svg") center center no-repeat;
-    width: 1.5rem;
-    height: 1.5rem;
-}
-
-.apple {
-    display: inline-block;
-    background: url("https://accounts.scdn.co/sso/images/new-apple-icon.e356139ea90852da2e60f1ff738f3cbb.svg") center center no-repeat;
-    width: 1.5rem;
-    height: 1.5rem;
-}
-
-.fb {
-    display: inline-block;
-    background: url("https://accounts.scdn.co/sso/images/new-facebook-icon.eae8e1b6256f7ccf01cf81913254e70b.svg") center center no-repeat;
-    width: 1.5rem;
-    height: 1.5rem;
-}
-
-.btn {
-    display: inline-flex;
-    margin: 4px auto;
-    border: 1px solid #878787;
-    background-color: transparent;
-    border-radius: 500px;
+.heading{
+    position: relative;
+    font-size: 50px;
     text-align: center;
-    inline-size: 100%;
-    font-weight: 700;
-    font-size: 1rem;
-    align-items: center;
-    color: white;
-    padding-inline: 1.9rem;
+    width: 100%;
+    font-weight:700;
+    padding-bottom: 40px;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+}
+.warning{
+    /* display: flex; */
+    display:none;
+    font-size: 15px;
+    padding: 10px 20px 10px 0px;
+}
+.warning i{
+    padding-right: 20px;
+}
+.alternate{
+    padding: 20px 0 ;
+    position: relative;
+    width: 45vw;
+    margin-left: 40%;
+}
+.password_div{
+    position: relative;
+}
+.pass_hide , .pass_show{
+    position: absolute;
+    opacity: 0.65;
+    top: 12px;
+    font-size: 25px;
+    right: 45%;
 }
 
-.btn:hover, .formitem {
-    border-color: white;
-}
-
-.btn > .txt {
-    letter-spacing: normal;
-    padding: 0.8rem 0px;
-    margin-left: auto;
-    margin-right: auto;
-}
-
-hr {
-    margin: 2rem 0rem;
-    /* width: 100%; */
-    /* background-color: #878787; */
-}
-
-.formitem {
-    display: inline-flex;
-    margin: 10px auto;
-    border: 1px solid #878787;
+.alternate button{
+    padding: 15px 10px;
+    border-radius:25px;
+    display: flex;
+    font-size: 17px;
+    flex-direction: row;
+    justify-content:left;
+    margin: 8px;
     background-color: transparent;
-    border-radius: 3px;
-    inline-size: 100%;
-    font-weight: 700;
-    font-size: 1rem;
+    border: 2px solid rgba(255, 255, 255, 0.466);
+    color:white;
+    width: 55%;
+}
+.alternate button:hover{
+    border: 2px solid rgb(255, 255, 255);
+
+}
+button .bi{
+    margin:0px 25px;
+   }
+
+hr{
+    margin: 10px 20px 30px 0;
+    width: 85%;
+    opacity: 0.35;
+}
+#wrong_detail{
+  color:rgb(241, 81,88);
+  display: none;
+}
+#myform{
+    position: relative;
+    font-size: 17px;
+    width: 100%;
+    align-items: center;
+    margin-left: 13vw;
+  }
+  #myform input{
+    display: block;
+    padding: 15px 10px;
+    width: 55%;
+    background-color: transparent;
+    border: 1px solid rgba(255, 255, 255, 0.367);
+    border-radius: 5px;
+    margin-bottom: 10px;
     color: white;
-    padding: 1rem 1rem;
+}
+form p{
+    padding-bottom: 10px;
+}
+.warn{
+    color:rgb(241, 81,88);
+}
+form button{
+    margin: 15px 0px;
+    width: 65%;
+    padding:13px 20px;
+    font-size: 15px;
+    border-radius: 25px;
+    background-color: rgb(30 ,215,96);
+}
+.toggle_btn{
+    display: flex;
+}
+   
+.toggle{
+    position: relative;
+    display: inline-block;
+    width: 40px;
+    height: 20px;
+    margin-top: 25px;
+    background-color: grey;
+    border-radius: 30px;
+  }
+  .toggle:after {
+    content: "";
+    position: absolute;
+    width: 19px;
+    height: 19px;
+    border-radius: 50%;
+    background-color: rgba(0, 0, 0, 0.859);
+    top: 0.75px;
+    left: 1.5px;
+    transition: all 0.5s;
+  }
+
+.checkbox:checked + .toggle::after {
+  left: 19.5px;
+  
+}
+.checkbox:checked + .toggle {
+  background-color: rgb(30 ,215,96);
 }
 
-.submit {
-    margin: 15px auto;
-    border: 1px solid #878787;
-    background-color: #1ed760;
-    border-radius: 500px;
+.toggle_btn p{
+    margin: 15px 10px;
+}
+.toggle_btn #switch {
+  display: none;
+}
+#me{
+    padding-top: 12px;
+}
+#no_acc{
+    opacity: 0.7;
+}
+
+#forgot , #sign_in{
+    text-decoration: underline;
+    opacity: 1;
+}
+
+.footer{
+    position: relative;
+    background-color: rgb(18,18,18);
+    color: white;
+    justify-content: center;
     text-align: center;
-    inline-size: 100%;
-    font-size: 1rem;
-    font-weight: 700;
-    color: black;
-    padding: 1rem 1rem;
-}
-
-.submit:hover {
-    background-color: #1bc657;
-    padding-left: 1.2rem;
-    padding-right: 1.2rem;
-}
-
-.formtxt {
-    font-size: 0.8rem;
+    font-size: 11px;
     font-weight: 600;
+    padding: 35px;
+    opacity: 0.7;
+    letter-spacing: 0.505px;
 }
 
-
-.forget, .signup {
-    display: flex;
-    justify-content: center;
-    margin: 15px auto;
-    font-size: small;
-    font-weight: 500;
-}
-
-.forget > a, .signup > a{
-    color: white;
-}
-
-.signup > span {
-    color: #a7a7a7;
-}
-
-.hvr:hover {
-    color: #1ed760;
-}
-
-
-/* --------------------------------Footer----------------------------------------- */
-footer {
-    text-align: center;
-    color: #a7a7a7;
-    padding: 2rem;
-    background-color: #121212;
-    font-size: 0.6875rem;
-}
-footer > span > a {
-    color: #a7a7a7;
-}
