--- a/signup.css
+++ b/signup.css
@@ -1,215 +1,173 @@
-* {
-    padding: 0;
+
+*{
     margin: 0;
-    box-sizing: border-box;
+    padding: 0;
+}
+body{
+    background-color: rgb(18,18,18);
+    color: white;
 }
 
-body {
-    background-color: #121212;;
+:root{
+    height: 100vh;
+    display: flex;
+    flex-direction: row;
 }
 
-.roboto-light {
-    font-family: "Roboto", sans-serif;
-    font-weight: 300;
-    font-style: normal;
+:root::-webkit-scrollbar {
+  width: 15px;}
+:root::-webkit-scrollbar-track {
+  background-color: rgba(17, 17, 17, 0.562)
+}
+:root::-webkit-scrollbar-thumb {
+  background-color: rgba(91, 90, 97, 0.363);
+}
+:root::-webkit-scrollbar-thumb:hover {
+  background: rgb(64, 63, 63); 
+}
+
+  .container{
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+    width: 25vw;
+    position: absolute;
+    top: 15vh;
+    left :40vw;
+    padding-bottom: 60px;
   }
 
-.roboto-regular {
-    font-family: "Roboto", sans-serif;
-    font-weight: 400;
-    font-style: normal;
-}
-
-.roboto-medium {
-    font-family: "Roboto", sans-serif;
-    font-weight: 500;
-    font-style: normal;
-}
-
-.roboto-bold {
-    font-family: "Roboto", sans-serif;
-    font-weight: 700;
-    font-style: normal;
-}
-
-.roboto-black {
-    font-family: "Roboto", sans-serif;
-    font-weight: 900;
-    font-style: normal;
-}
-
-.nav {
-    /* background: red; */
-    padding: 1rem;
-}
-
-.logo {
-    width: 7rem;
-}
-
-.mainbox {
-    display: grid;
-    justify-content: center;
-}
-
-.inbox {
-    /* background: rgb(0, 0, 0); */
-    width:22.5rem;
-    padding: 1rem;
-}
-
-h1{
-    color: white;
-    font-size: 2.8rem;
-    margin-bottom: 2rem;
-}
-
-.formitem {
-    display: inline-flex;
-    margin: 10px auto;
-    border: 1px solid #878787;
-    background-color: transparent;
-    border-radius: 3px;
-    inline-size: 100%;
-    font-weight: 700;
-    font-size: 1rem;
-    color: white;
-    padding: 1rem 1rem;
-}
-
-.formtxt {
-    color: white;
-}
-
-.phno-signup {
-    color: #1bc657;
-}
-
-
-.submit {
-    margin: 15px auto;
-    border: 1px solid #878787;
-    background-color: #1ed760;
-    border-radius: 500px;
-    text-align: center;
-    inline-size: 100%;
-    font-size: 1rem;
-    font-weight: 700;
-    color: black;
-    padding: 1rem 1rem;
-}
-
-.submit:hover {
-    background-color: #1bc657;
-    padding-left: 1.2rem;
-    padding-right: 1.2rem;
-    cursor: pointer;
-}
-
-.hr-text {
-    border: 0;
-    font-size: 1rem;
-    height: 1.5em;
-    line-height: 1em;
-    position: relative;
-    text-align: center;
-    margin: 1.5rem 0rem;
-}
-
-.hr-text::before {
-    content: "";
-    background: rgb(170, 170, 170);
+  .logo{
     position: absolute;
-    left: 0;
-    top: 50%;
-    width: 100%;
-    height: 1px;
-}
-
-.hr-text::after {
-    background-color: black;
-    color: white;
-    content: attr(data-content);
-    line-height: 1.5em;
-    padding: 0 7px;
-    position: relative;
-}
-
-
-.google {
-    display: inline-block;
-    background: url("https://accounts.scdn.co/sso/images/new-google-icon.72fd940a229bc94cf9484a3320b3dccb.svg") center center no-repeat;
-    width: 1.5rem;
-    height: 1.5rem;
-}
-
-.apple {
-    display: inline-block;
-    background: url("https://accounts.scdn.co/sso/images/new-apple-icon.e356139ea90852da2e60f1ff738f3cbb.svg") center center no-repeat;
-    width: 1.5rem;
-    height: 1.5rem;
-}
-
-.fb {
-    display: inline-block;
-    background: url("https://accounts.scdn.co/sso/images/new-facebook-icon.eae8e1b6256f7ccf01cf81913254e70b.svg") center center no-repeat;
-    width: 1.5rem;
-    height: 1.5rem;
-}
-
-.btn {
-    display: inline-flex;
-    margin: 4px auto;
-    border: 1px solid #878787;
-    background-color: transparent;
-    border-radius: 500px;
-    text-align: center;
-    inline-size: 100%;
-    font-weight: 700;
-    font-size: 1rem;
-    align-items: center;
-    color: white;
-    padding-inline: 1.9rem;
-}
-
-.btn:hover, .formitem {
-    border-color: white;
-    cursor: pointer;
-}
-
-.btn > .txt {
-    letter-spacing: normal;
-    padding: 0.8rem 0px;
-    margin-left: auto;
-    margin-right: auto;
-}
-
-.space {
-    margin: 2rem 0rem;
-}
-
-.signup {
+    top: 25px;
     display: flex;
+    flex-direction: row;
+    left: 25px;
     justify-content: center;
-    margin: 15px auto;
-    font-size: 1rem;
-    font-weight: 500;
-}
+    align-items: center;
+  }
 
-.signup > a{
+  .logo i{
+    font-size: 35px;
+    padding: 5px;
+  }
+
+  .logo p{
+    font-weight: 900;
+    font-size: larger;
+  }
+
+  .heading{
+    font-size: 45px;
+    font-weight: 650;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    padding: 0 0 20px 0px;
+  }
+  
+  form{
+    font-size: 17px;
+    width: 100%;
+  }
+  input{
+    display: block;
+    padding: 15px 10px;
+    width: 77%;
+    background-color: transparent;
+    border: 1px solid rgba(255, 255, 255, 0.367);
+    border-radius: 5px;
     color: white;
+  }
+  form p{
+    padding: 10px 0px;
+  }
+.warn{
+    display: none;
+    color:rgb(241, 81,88);
+}
+.phn_no a{
+    color: rgb(30 ,215,96);
 }
 
-.signup > span {
-    color: #a7a7a7;
+form button{
+    margin: 15px 0px;
+    width: 83%;
+    padding:13px 20px;
+    font-size: 15px;
+    border-radius: 25px;
+    background-color: rgb(30 ,215,96);
 }
-
-footer {
+.separator {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
     text-align: center;
-    color: #a7a7a7;
-    padding: 2rem;
-    font-size: 0.6875rem;
+    width: 85%;
+    padding: 20px 0px;
+  }
+  
+  .separator::before,
+  .separator::after {
+    content: '';
+    flex: 1;
+    border-bottom: 2px solid #ffffff;
+    opacity: 0.35;
+  }
+  
+  .separator:not(:empty)::before {
+    margin-right: 0.5em;
+  }
+  
+  .separator:not(:empty)::after {
+    margin-left: 0.5em;
+  }
+.alternate{
+    padding: 20px 0 ;
 }
-footer > span > a {
-    color: #a7a7a7;
+
+.alternate button{
+    padding: 15px 10px;
+    border-radius:25px;
+    display: flex;
+    font-size: 17px;
+    flex-direction: row;
+    justify-content:left;
+    margin: 8px;
+    background-color: transparent;
+    border: 2px solid rgba(255, 255, 255, 0.466);
+    color:white;
+    width: 85%;
+}
+.alternate button:hover{
+    border: 2px solid rgb(255, 255, 255);
+
+}
+ button .bi{
+     margin-right: 40px;
+    }
+    
+
+hr{
+    margin: 10px 20px 30px 0;
+    width: 85%;
+    opacity: 0.35;
+}
+.para{
+    width: fit-content;
+    display: flex;
+    justify-content: left;
+    flex-direction: row;
+    padding: 10px 20px 20px 0;
+    width: 90%;
+}
+.acc{
+    opacity: 0.7;
+}
+.acc1{
+    opacity: 0.7;
+    width: 90%;
+}
+
+.login{
+    opacity: 1;
+    color: #ffffff;
 }
